@@ -3,12 +3,13 @@ package org.andromda.timetracker.security;
 import java.io.UnsupportedEncodingException;
 import java.security.MessageDigest;
 import java.security.NoSuchAlgorithmException;
+import org.apache.commons.codec.binary.Base64;
 
 public class PasswordEncoder
 {
     /**
      * @param plaintext
-     * @return new sun.misc.BASE64Encoder().encode(raw)
+     * @return new String(org.apache.commons.codec.binary.Base64.encodeBase64(raw))
      * @throws NoSuchAlgorithmException
      * @throws UnsupportedEncodingException
      */
@@ -17,7 +18,8 @@ public class PasswordEncoder
         final MessageDigest md = MessageDigest.getInstance("MD5");
         md.update(plaintext.getBytes("UTF8"));
         final byte raw[] = md.digest();
-        final String hash = new sun.misc.BASE64Encoder().encode(raw);
+        //String hash = new sun.misc.BASE64Encoder().encode(raw);
+        String hash = new String(Base64.encodeBase64(raw));
         return hash;
     }
 }
